[metadata]
name = neutron-solaris
summary = This project tracks the work to integrate the Solaris neutron with Neutron. This project contains the Solaris Neutron Agent Mixin, Security Groups Driver, ML2 Mechanism Driver and the utils modules they use in order to properly bind neutron ports on a Solaris host. This project resulted from the neutron core vendor decomposition.
description_file =
    README.rst
license = Apache License, Version 2.0
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://github.com/openstack/neutron-solaris
python_requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: SunOS/Solaris
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

keywords = openstack neutron solaris neutron

[files]
packages =
    neutron_solaris

[entry_points]
oslo.config.opts =
    neutron_solaris = neutron_solaris.config:list_opts
console_scripts =
    neutron-solaris-agent = neutron_solaris.agent.solaris_neutron_agent:main

neutron.ml2.mechanism_drivers =
    solaris = neutron_solaris.ml2.mech_solaris:SolarisMechanismDriver

[compile_catalog]
directory = neutron_solaris/locale
domain = neutron-solaris

[update_catalog]
domain = neutron-solaris
output_dir = neutron_solaris/locale
input_file = neutron_solaris/locale/neutron-solaris.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = neutron_solaris/locale/neutron-solaris.pot